--- a/package.json
+++ b/package.json
@@ -2,26 +2,27 @@
   "name": "bread",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ricarra08/bread.git"
+    "url": "git+https://github.com/sammygallo/bread-ric.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ricarra08/bread/issues"
+    "url": "https://github.com/sammygallo/bread-ric/issues"
   },
-  "homepage": "https://github.com/ricarra08/bread#readme",
+  "homepage": "https://github.com/sammygallo/bread-ric#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-react-views": "^0.11.0",
+    "ls": "^0.2.1",
     "method-override": "^3.0.0"
   }
 }
