--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.1",
     "express-react-views": "^0.11.0",
     "ls": "^0.2.1",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^6.3.3"
   }
 }
